updated index.css with media queries

--- a/css/index.css
+++ b/css/index.css
@@ -99,3 +99,12 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 490px) {
+  .headerText {
+    font-size: 60px;
+  }
+  .lead {
+    font-size: 20px;
+  }
+}
